:lipstick: styles: adjust styles so overflow doesn't cause issues on tablet and mobile

--- a/dev/scss/pdp-button-badges.scss
+++ b/dev/scss/pdp-button-badges.scss
@@ -17,7 +17,6 @@
         }
 
         &:nth-child(2) {
-          padding-right: 10px;
           height: 64px;
         }
       }
